--- a/product.html
+++ b/product.html
@@ -1,34 +1,223 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <!-- nav panel start -->
     <div id="m" style="display:block;">
-    <div><button><a href="index.html">menu</a></button></div>
-    <div><button><a href="product.html">goods</a></button></div>
-    <div><button><a href="shares.html">shares</a></button></div>
-    <div class="x">
-        <button onclick='document.getElementById("m").style.display="none"'>X</button>
+        <div><button><a href="index.html">menu</a></button></div>
+        <div><button><a href="product.html">goods</a></button></div>
+        <div><button><a href="shares.html">shares</a></button></div>
+        <div class="x">
+            <button onclick='document.getElementById("m").style.display="none"'>X</button>
+        </div>
     </div>
-    </div>
+    <!-- nav panel end -->
     <button id="but" onclick='document.getElementById("m").style.display="block"'>menu</button>
+    <div class="products-container">
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
+        <div class="products">
+            <img class="im" src="/img/__2021-09-15_153859.png">
+            <p class="title">Iphone 14</p>
+            <p class="p1">Price:799$</p>
+            <div class="stars">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img src="/img/13595.png">
+                <img class="heart" src="/img/54966.png">
+            </div>
+        </div>
     </div>
-   <div class="products">
-    <img class="im" src="/img/__2021-09-15_153859.png">
-    <p class="title">Iphone 14</p>
-    <p class="p1">Price:799$</p>
-    <div class="stars">
-        <img src="/img/13595.png">
-        <img src="/img/13595.png">
-        <img src="/img/13595.png">
-        <img src="/img/13595.png">
-        <img src="/img/13595.png">
-        <img class="heart" src="/img/54966.png">
-    </div>
-   </div>
+
 </body>
+
 </html>
