--- a/shares.html
+++ b/shares.html
@@ -1,21 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div id="m" style="display:block;">
-    <div><button><a href="index.html">menu</a></button></div>
-    <div><button><a href="product.html">goods</a></button></div>
-    <div><button><a href="shares.html">shares</a></button></div>
-    <div class="x">
-        <button onclick='document.getElementById("m").style.display="none"'>X</button>
-    </div>
+        <div><button><a href="index.html">menu</a></button></div>
+        <div><button><a href="product.html">goods</a></button></div>
+        <div><button><a href="shares.html">shares</a></button></div>
+        <div class="x">
+            <button onclick='document.getElementById("m").style.display="none"'>X</button>
+        </div>
     </div>
     <button id="but" onclick='document.getElementById("m").style.display="block"'>menu</button>
+    </div>
+    <div class="sharesdiv">
+        <p class="sharesp">АКЦИИ</p>
+    </div>
+    <div class="shares-container">
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+             <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+           <a href="/pro.html"><p class="title">Iphone 11</p></a>  
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+             <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
     </div>
 </body>
 </html>
