--- a/product.html
+++ b/product.html
@@ -14,6 +14,7 @@
         <div><button><a href="index.html">menu</a></button></div>
         <div><button><a href="product.html">goods</a></button></div>
         <div><button><a href="shares.html">shares</a></button></div>
+        <div><button><a href="cont.html">contacts</a></button></div>
         <div class="x">
             <button onclick='document.getElementById("m").style.display="none"'>X</button>
         </div>
