--- a/shares.html
+++ b/shares.html
@@ -13,6 +13,7 @@
         <div><button><a href="index.html">menu</a></button></div>
         <div><button><a href="product.html">goods</a></button></div>
         <div><button><a href="shares.html">shares</a></button></div>
+        <div><button><a href="cont.html">contacts</a></button></div>
         <div class="x">
             <button onclick='document.getElementById("m").style.display="none"'>X</button>
         </div>
@@ -36,6 +37,95 @@
         <div class="sharesblock">
             <img class="sharesimg" src="/img/2385715385.jpg">
              <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div><div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
+            <p class="pshares">Price:1$!!!</p>
+        </div>
+        <div class="sharesblock">
+            <img class="sharesimg" src="/img/2385715385.jpg">
+            <a href="/pro.html"><p class="title">Iphone 11</p></a>
             <p class="pshares">Price:1$!!!</p>
         </div>
         <div class="sharesblock">
