--- a/product.html
+++ b/product.html
@@ -11,7 +11,8 @@
 <body>
     <!-- nav panel start -->
     <div id="m" style="display:block;">
-        <div><button><a href="index.html">menu</a></button></div>
+        <div><button><a href="/menu.html">menu</a></button></div>
+        <div><button><a href="index.html">about</a></button></div>
         <div><button><a href="product.html">goods</a></button></div>
         <div><button><a href="shares.html">shares</a></button></div>
         <div><button><a href="cont.html">contacts</a></button></div>
