--- a/shares.html
+++ b/shares.html
@@ -10,7 +10,8 @@
 
 <body>
     <div id="m" style="display:block;">
-        <div><button><a href="index.html">menu</a></button></div>
+        <div><button><a href="/menu.html">menu</a></button></div>
+        <div><button><a href="index.html">about</a></button></div>
         <div><button><a href="product.html">goods</a></button></div>
         <div><button><a href="shares.html">shares</a></button></div>
         <div><button><a href="cont.html">contacts</a></button></div>
@@ -114,25 +115,7 @@
             <a href="/pro.html"><p class="title">Iphone 11</p></a>
             <p class="pshares">Price:1$!!!</p>
         </div>
-        <div class="sharesblock">
-            <img class="sharesimg" src="/img/2385715385.jpg">
-            <a href="/pro.html"><p class="title">Iphone 11</p></a>
-            <p class="pshares">Price:1$!!!</p>
-        </div><div class="sharesblock">
-            <img class="sharesimg" src="/img/2385715385.jpg">
-            <a href="/pro.html"><p class="title">Iphone 11</p></a>
-            <p class="pshares">Price:1$!!!</p>
-        </div>
-        <div class="sharesblock">
-            <img class="sharesimg" src="/img/2385715385.jpg">
-            <a href="/pro.html"><p class="title">Iphone 11</p></a>
-            <p class="pshares">Price:1$!!!</p>
-        </div>
-        <div class="sharesblock">
-            <img class="sharesimg" src="/img/2385715385.jpg">
-            <a href="/pro.html"><p class="title">Iphone 11</p></a>
-            <p class="pshares">Price:1$!!!</p>
-        </div>
+      
     </div>
 </body>
 </html>
