--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        body{
+            background-image: url(/img/aq.png);
+        }
+    </style>
 </head>
 <body>
     <div id="m" style="display:block;">
@@ -21,7 +26,7 @@
     </div>
     <div class="center">
         <h1>iTech Haven: Эксклюзивные Миры Apple</h1>
-        <p class="p10">Добро пожаловать в iTech Haven – истинный рай для поклонников технологий Apple! Мы - не просто магазин, мы целый мир, в котором воплощаются самые передовые технологии, стильные дизайны и непревзойденное качество продукции Apple.
+        <p class="p10"> – истинный рай для поклонников технологий Apple! Мы - не просто магазин, мы целый мир, в котором воплощаются самые передовые технологии, стильные дизайны и непревзойденное качество продукции Apple.
 
             Наш ассортимент включает в себя последние модели iPhone, iPad, MacBook, Apple Watch и множество других аксессуаров, созданных, чтобы удовлетворить самые изысканные потребности наших клиентов. Мы поставляем только официальную продукцию Apple, гарантируя аутентичность каждого устройства, приобретенного у нас.
             
