--- a/menu.html
+++ b/menu.html
@@ -13,34 +13,42 @@
         width: 530px;
         background-color: white;
         border-radius: 50px;
-  margin-left: 80px; 
+  margin-left: 35px; 
  
     }
     .p19{
         color: rgb(90, 85, 85);
         position: absolute;
         margin-bottom: 10px;
-        margin-left: 5px;
+        margin-left: 10px;
     }
     .img11{
         height:25px ;
         width:25px ;
         position: absolute;
         margin-left: 480px;
-        margin-top: 10px;
+        margin-top: 9px;
     }
 .obj{
     background-color: rgb(255, 255, 255);
-    height: 500px;
+    height: 450px;
     width: 700px;
-    margin-left: 500px;
+    margin-left: 400px;
     padding: 15px;
+    ;
 }
 .obj2{
-    background-color: rgb(165, 163, 163);
+    background-color: rgb(188, 197, 197);
     height: 400px;
     width: 600px;
-    margin-left: 400px;
+    margin-left: 44px;
+    margin-bottom: 330px;
+    border-radius: 5px;
+    box-shadow:9px 14px 28px -7px rgba(92,82,92,1);
+    
+}
+body{
+    background-image: url(/img/zzz.jpg);
 }
 </style>
 <head>
@@ -51,6 +59,7 @@
 </head>
 
 <body>
+    
     <div id="m" style="display:block;">
         <div><button><a href="/menu.html">menu</a></button></div>
         <div><button><a href="index.html">about</a></button></div>
@@ -68,10 +77,11 @@
     <h1>Добро пожаловать в iTech Haven!!!</h1>
     <p class="st">↓↓↓</p>
     <div class="poisk">
-        <p class="p19">Поиск</p>
+        <p class="p19">Поиск...</p>
         <img class="img11" src="/img/OIP.jpg">
     </div>
     </div>
 </div>
+
     </body>
     </html>
