--- a/product.html
+++ b/product.html
@@ -22,10 +22,11 @@
     </div>
     <!-- nav panel end -->
     <button id="but" onclick='document.getElementById("m").style.display="block"'>menu</button>
+    <img class="korzina" src="img/pngtree-shopping-cart-icon-png-image_5060874.jpg">
     <div class="products-container">
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -38,7 +39,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -51,7 +52,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -64,7 +65,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -77,7 +78,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -90,7 +91,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -103,7 +104,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -116,7 +117,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -129,7 +130,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -142,7 +143,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -155,7 +156,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -168,7 +169,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -181,7 +182,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -194,7 +195,7 @@
         </div>
         <div class="products">
             <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
+            <a href="/pro.html"><p class="title">Iphone 14</p></a>
             <p class="p1">Price:799$</p>
             <div class="stars">
                 <img src="/img/13595.png">
@@ -206,9 +207,9 @@
             </div>
         </div>
         <div class="products">
-            <img class="im" src="/img/__2021-09-15_153859.png">
-            <p class="title">Iphone 14</p>
-            <p class="p1">Price:799$</p>
+            <img class="im" src="/img/images.jpg">
+            <a href="/pro.html"><p class="title">Steve Jobs</p></a>
+            <p class="p1"><b>Price:000$</b></p>
             <div class="stars">
                 <img src="/img/13595.png">
                 <img src="/img/13595.png">
